# rust-template

./: .gitignore  .pre-commit-config.yaml  Cargo.toml  README.md  cargo-generate.toml  cliff.toml  rustfmt.toml
